# game-of-life

./: Cargo.toml  LICENSE_MIT  README.md
app/: index.html  package-lock.json  package.json
app/src/: main.ts
app/src/assets/styles/: global.css
client/: .travis.yml  index.html  package-lock.json  package.json
client/src/: main.js
client/src/scripts/: index.js  index.ts
pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
src/: lib.rs
tests/: web.rs
